# alpine-sun

./: .gitignore  CLAUDE.md  CMakeLists.txt  MILESTONES.md  README.md
assets/: everest-summit.gpx  matterhorn-hornli.gpx
cmake/: FindZLIB.cmake
shaders/: horizon_map.comp  route.frag  route.vert  sky.frag  sky.vert  sky_view.comp  sun_hours.comp  terrain.frag  terrain.vert  terrain_depth.vert  transmittance.comp
src/: app_state.cpp  app_state.h  atmosphere.cpp  atmosphere.h  dem_loader.cpp  dem_loader.h  geo_frame.cpp  geo_frame.h  gpx.cpp  gpx.h  main.cpp  presets.cpp  presets.h  psa.cpp  psa.h  sun_driver.cpp  sun_driver.h  terrain_mesh.cpp  terrain_mesh.h
